--- a/Niculae_AnaMaria_Lab2/Views/Books/Index.cshtml
+++ b/Niculae_AnaMaria_Lab2/Views/Books/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@model IEnumerable<Niculae_AnaMaria_Lab2.Models.Book>
+﻿@* @model IEnumerable<Niculae_AnaMaria_Lab2.Models.Book> *@
 
+@model PaginatedList<Niculae_AnaMaria_Lab2.Models.Book>
 @{
     ViewData["Title"] = "Index";
 }
@@ -9,17 +10,36 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+<form asp-action="Index" method="get">
+    <div class="form-actions no-color">
+        <p>
+            Find by title: <input type="text" name="SearchString" value="@ViewData["CurrentFilter"]" />
+            <input type="submit" value="Search" class="btn btn-default" /> |
+            <a asp-action="Index">Back to Full List</a>
+        </p>
+    </div>
+</form>
+
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Title)
+                @* @Html.DisplayNameFor(model => model.Title) *@
+               @*  <a asp-action="Index" asp-routesortOrder="@ViewData["TitleSortParm"]">@Html.DisplayNameFor(model => model.Title)</a> *@
+                @* <a asp-action="Index" asp-route-sortOrder="@ViewData["TitleSortParm"]">@Html.DisplayNameFor(model => model.Title)</a> *@
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["TitleSortParm"]" asp-routecurrentFilter="@ViewData["CurrentFilter"]">Title</a>
+
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Author)
+                @* @Html.DisplayNameFor(model => model.Author) *@
+                Author
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Price)
+                @* @Html.DisplayNameFor(model => model.Price) *@
+                @* <a asp-action="Index" asp-routesortOrder="@ViewData["PriceSortParm"]">@Html.DisplayNameFor(model => model.Price)</a> *@
+                @* <a asp-action="Index" asp-route-sortOrder="@ViewData["PriceSortParm"]">@Html.DisplayNameFor(model => model.Price)</a> *@
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["PriceSortParm"]" asp-routecurrentFilter="@ViewData["CurrentFilter"]">Price</a>
             </th>
             <th></th>
         </tr>
@@ -45,3 +65,22 @@
 }
     </tbody>
 </table>
+
+@{
+    var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
+    var nextDisabled = !Model.HasNextPage ? "disabled" : "";
+}
+<a asp-action="Index"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
+   asp-route-pageNumber="@(Model.PageIndex - 1)"
+   asp-route-currentFilter="@ViewData["CurrentFilter"]"
+   class="btn btn-default @prevDisabled">
+    Previous
+</a>
+<a asp-action="Index"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
+   asp-route-pageNumber="@(Model.PageIndex + 1)"
+   asp-route-currentFilter="@ViewData["CurrentFilter"]"
+   class="btn btn-default @nextDisabled">
+    Next
+</a>
