--- a/Niculae_AnaMaria_Lab2/Views/Shared/_Layout.cshtml
+++ b/Niculae_AnaMaria_Lab2/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="BooksDropdown" asp-action="Index">Book Dropdown</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Statistics">Statistics</a>
+                        </li>
                     </ul>
                 </div>
             </div>
